--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,28 @@
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><%= link_to "Home",   root_path %></li>
 	        <li><%= link_to "Help",   help_path %></li>
-	        <li><%= link_to "Log in", signup_path %></li>
+	        <% if logged_in? %>
+	        <!--  ログイン済み  -->
+	        	<li><%= link_to "Users", '#' %></li>
+		        <li class="dropdown">
+		        <!--  ドロップダウンメニュー  -->
+		        <!--  application.jsにBootstrapのJavaScriptライブラリを追加 //= require bootstrap  -->
+		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+		              Account <b class="caret"></b>
+		            </a>
+		            <ul class="dropdown-menu">
+		              <li><%= link_to "Profile", current_user %></li>
+		              <li><%= link_to "Settings", '#' %></li>
+		              <li class="divider"></li>
+		              <li>
+		                <%= link_to "Log out", logout_path, method: :delete %>
+		              </li>
+		            </ul>
+		        </li>
+	        <% else %>
+	        <!--  ログインしていない  -->
+				<li><%= link_to "Log in", login_path %></li>
+	        <% end %>
 	      </ul>
 	    </nav>
 	  </div>
